# CISLC-O3

./: .gitignore  .svlint.toml  LICENSE  README.md  agent.md
doc/: CISLC_O3.md  CISLC_O3_frontend.md  backend_testharness_json.md  ftq.md  icache.md  icache_basic_refill_test.md  prompt.txt  test_plan.md  verilator_icache_test_plan.md
perf/regfile/: README.md  physical_regfile_variants_perf.sv  regfile_perf.xdc  regfile_perf_top.sv  run_vivado_synth.tcl
rtl/: O3.sv  Tile.sv  circuit01.sv
rtl/backend/: backend.sv  decoder.sv  div_execute_unit.sv  free_list.sv  int_execute_unit.sv  issue_queue.sv  mul_execute_unit.sv  physical_regfile.sv  physical_regfile_variants.sv  rename_map_table.sv  rob.sv  uop_queue.sv
rtl/common/: lfsr.sv  o3_pkg.sv  o3_sram.sv
rtl/core/: o3_core.sv
rtl/frontend/: fetch_buffer.sv  frontend.sv  ftq.sv  icache.sv  ifu.sv
sim/backend_testharness/: CMakeLists.txt  README.md  backend_instruction_stream.cpp  main.cpp
sim/backend_testharness_json/: CMakeLists.txt  Makefile  README.md  backend_instruction_stream.cpp  dpi_compat_stubs.cpp  main.cpp  program.json  program_kanata.json
sim/frontend_testharness/: CMakeLists.txt  QUICKSTART.md  RISCV_EXEC_MODEL_README.md  dpi_logger.c  dpi_logger.cpp  inst.hex  main.cpp  riscv_exec_model.cpp  riscv_exec_test.sv
sim/icache/: Makefile  Makefile.basic_refill  Makefile.cycle  README.md  tb_icache.cpp  tb_icache_basic_refill.cpp  tb_icache_cycle.cpp
sim/icache/hex/: data_way0_bank0.hex  data_way0_bank1.hex  data_way0_bank2.hex  data_way0_bank3.hex  tag_way0.hex
sim/lfsr/: Makefile  README.md  main.cpp  plot_variance.py
sim/physical_regfile_testharness/: CMakeLists.txt  README.md  main.cpp
tb/: backend_testharness.sv  backend_testharness_json.sv  dpi_functions.svh  frontend_testharness.sv  physical_regfile_testharness.sv
